--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <body>
         <h1>I am a frontend developer.</h1>
 
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos et officia ab ducimus non est tenetur temporibus error aspernatur earum quas corrupti atque consectetur commodi mollitia iusto, totam distinctio. Soluta?</p>
+
         <script src="./js/app.js"></script>
     </body>
 </html>
