--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <body>
         <h1>This is About of the page.</h1>
 
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni reprehenderit asperiores deleniti delectus voluptas doloribus! Fugit nam culpa pariatur iste neque saepe ullam qui molestias obcaecati! Enim voluptate ab explicabo!</p>
 
         <script src="./js/app.js"></script>
     </body>
