--- a/services.html
+++ b/services.html
@@ -6,6 +6,9 @@
         
         <h1>These are services of this page.</h1>
 
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta odit magni quasi eveniet labore. Obcaecati, necessitatibus molestias reiciendis, quisquam sint quia, consequuntur vero ab non laborum accusantium animi. Repellendus, temporibus error. Debitis sed harum enim? Dolorum quis dolores, repudiandae cupiditate impedit totam veritatis inventore beatae dignissimos. Veniam nostrum molestiae suscipit!
+
+        </p>
         <script src="./js/app.js"></script>
     </body>
 </html>
